# django_simulaions_visualizator

./: LICENSE  README.md  db.sqlite3  manage.py  pyproject.toml  test.txt
django_simulations_visualizator/: asgi.py  settings.py  urls.py  wsgi.py
django_simulations_visualizator/apps/simulations_manager/: admin.py  apps.py  models.py
django_simulations_visualizator/apps/simulations_manager/migrations/: 0001_initial.py
