[tool.poetry]
name = "simulations_visualizator"
version = "0.1.0"
description = ""
authors = ["AlekseyFobos <naleksey.osipov@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Django = "^4.0.2"
numpy = "<1.22"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
numba = "^0.55.1"
plotly = "^5.5.0"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
